crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__inspector__tests__gain_source_none.snap
---
source: crates/loxia-tui/src/widgets/inspector.rs
assertion_line: 629
expression: "replay_gain_source_label(AppliedGain::None, None)"
---
no gain
