crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__inspector__tests__gain_source_tags_album.snap
---
source: crates/loxia-tui/src/widgets/inspector.rs
assertion_line: 617
expression: "replay_gain_source_label(AppliedGain::Tags(ReplayGainMode::Album), Some(-6.2))"
---
ReplayGain (album): -6.2 dB
