crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__inspector__tests__gain_source_tags_track.snap
---
source: crates/loxia-tui/src/widgets/inspector.rs
assertion_line: 621
expression: "replay_gain_source_label(AppliedGain::Tags(ReplayGainMode::Track), Some(-3.4))"
---
ReplayGain (track): -3.4 dB
