crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__inspector__tests__inspector_snapshot_artist.snap
---
source: crates/loxia-tui/src/widgets/inspector.rs
assertion_line: 668
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 20 },
    content: [
        "              ┌──────────┐              ",
        "              │          │              ",
        "              │          │              ",
        "              │     ♪    │              ",
        "              │          │              ",
        "              └──────────┘              ",
        "Boy Harsher                             ",
        "                                        ",
        "A synth-heavy darkwave duo from         ",
        "Massachusetts.                          ",
        "                                        ",
        "                                        ",
        "                                        ",
        "Actions:                                ",
        "[enter] Play (Replace Queue)            ",
        "[A] Add to Queue                        ",
        "[i] Insert Next                         ",
        "[m] Instant Mix                         ",
        "[d] Download                            ",
        "[f] Favourite                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
