crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__inspector__tests__inspector_snapshot_empty.snap
---
source: crates/loxia-tui/src/widgets/inspector.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 20 },
    content: [
        "┌──────────────────────────────────────┐",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "└──────────────────────────────────────┘",
        "—                                       ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
