crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__inspector__tests__narrow_inspector_snapshot_24_cells.snap
---
source: crates/loxia-tui/src/widgets/inspector.rs
assertion_line: 812
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 24, height: 20 },
    content: [
        "      ┌──────────┐      ",
        "      │          │      ",
        "      │          │      ",
        "      │     ♪    │      ",
        "      │          │      ",
        "      └──────────┘      ",
        "Fate                    ",
        "Boy Harsher             ",
        "Care                    ",
        "2019 · Disc 1, Track 2  ",
        "3:00                    ",
        "FLAC 16-bit / 44.1 kHz  ",
        "Actions:                ",
        "[enter] Play (Replace Qu",
        "[A] Add to Queue        ",
        "[i] Insert Next         ",
        "[m] Instant Mix         ",
        "[ctrl+p] Add to Playlist",
        "[d] Download            ",
        "[f] Favourite           ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
